--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -20,6 +20,10 @@
     </div>
 
     <div class="form-group">
+      <%= f.input :picture_url %>
+    </div>
+
+    <div class="form-group">
       <%= f.button :submit, class: 'btn btn-primary' %>
       <%= link_to 'Cancel', flats_path, class: 'btn btn-secondary' %>
     </div>
