--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -23,7 +23,7 @@
     <div class="d-flex flex-wrap justify-content-between">
       <% @flats.each do |flat| %>
         <div class="card p-2 m-2" style="width: 300px;">
-
+          <img src=<%= flat.picture_url %> class="card-img-top" alt="...">
           <h5 class="card-title"><%= flat.name %></h5>
           <h6 class="card-subtitle mb-2 text-body-secondary"><%= flat.address %></h6>
           <div class="card-body">
