--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -11,7 +11,19 @@
   </div>
 
 
-  <%= link_to "Add Flat", new_flat_path, class: "btn btn-outline-primary col-1 m-1" %>
+
+
+  <div class="col-4 text-end">
+    <% if user_signed_in? %>
+      <%= link_to "Add Flat", new_flat_path, class: "btn btn-outline-primary m-1" %>
+      <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger m-1" %>
+
+
+    <% else %>
+      <%= link_to "Sign In", new_user_session_path, class: "btn btn-outline-primary m-1" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-success m-1" %>
+    <% end %>
+  </div>
 </nav>
 
 <div class="container">
