--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,32 +1,38 @@
 <%= simple_form_for @flat do |f| %>
-    <div class="form-group">
-      <%= f.input :name %>
-    </div>
+  <div class="form-group">
+    <%= f.input :name %>
+  </div>
 
-    <div class="form-group">
-      <%= f.input :address %>
-    </div>
+  <div class="form-group">
+    <%= f.input :address %>
+  </div>
 
-    <div class="form-group">
-      <%= f.input :description %>
-    </div>
+  <div class="form-group">
+    <%= f.input :description %>
+  </div>
 
-    <div class="form-group">
-      <%= f.input :price_per_night %>
-    </div>
+  <div class="form-group">
+    <%= f.input :price_per_night %>
+  </div>
 
-    <div class="form-group">
-      <%= f.input :number_of_guests %>
-    </div>
+  <div class="form-group">
+    <%= f.input :number_of_guests %>
+  </div>
 
-    <div class="form-group">
-      <%= f.input :picture_url %>
-    </div>
+  <div class="form-group">
+    <%= f.input :picture_url %>
+  </div>
 
-    <div class="form-group">
-      <%= f.button :submit, class: 'btn btn-primary' %>
-      <%= link_to 'Cancel', flats_path, class: 'btn btn-secondary' %>
-    </div>
+  <div class="form-group">
+    <%= f.input :available_from, as: :date %>
+  </div>
 
+  <div class="form-group">
+    <%= f.input :available_to, as: :date %>
+  </div>
 
-  <% end %>
+  <div class="form-group">
+    <%= f.button :submit, class: 'btn btn-primary' %>
+    <%= link_to 'Cancel', flats_path, class: 'btn btn-secondary' %>
+  </div>
+<% end %>
